Added some styles to cue-bs.html

--- a/02-StaticWeb/cue-bs.html
+++ b/02-StaticWeb/cue-bs.html
@@ -1,137 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Cue</title>
+    <meta charset="UTF-8">
+    <title>Cue</title>
 
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body class="container">
-	<div class="jumbotron">
-		<h1>Kraków University of Economics</h1>	
-	</div>
+    <div class="jumbotron">
+        <h1>Kraków University of Economics</h1>	
+    </div>
 
-	<p>From Wikipedia, the free encyclopedia</p>
+    <p>From Wikipedia, the free encyclopedia</p>
 
-	<img src="https://upload.wikimedia.org/wikipedia/en/4/49/Logo_ue_krakow.jpg">
+    <div class="row">
+        <a href="#" class="thumbnail">
+            <img src="https://upload.wikimedia.org/wikipedia/en/4/49/Logo_ue_krakow.jpg" alt="LOGO">
+        </a>
+    </div>
 
-	<p>
-		<b>Kraków University of Economics</b> (<b>CUE</b>; Polish: <i>Uniwersytet Ekonomiczny w Krakowie</i>) is one of the five Polish public economics universities. CUE came into existence in 1925. It is the biggest university of economic sciences in Poland. Kraków University of Economics is one of the three largest universities in Kraków, after Jagiellonian University and the <a href="https://en.wikipedia.org/wiki/AGH_University_of_Science_and_Technology">AGH University of Science and Technology.</a>
-	</p>
+    <section>
+        <p>
+            <b>Kraków University of Economics</b> (<b>CUE</b>; Polish: <i>Uniwersytet Ekonomiczny w Krakowie</i>) is one of the five Polish public economics universities. CUE came into existence in 1925. It is the biggest university of economic sciences in Poland. Kraków University of Economics is one of the three largest universities in Kraków, after Jagiellonian University and the <a href="https://en.wikipedia.org/wiki/AGH_University_of_Science_and_Technology">AGH University of Science and Technology.</a>
+        </p>
 
-	<blockquote>
-		The motto and mission of the university in Latin is "Rerum cognoscere causas et valorem" (in English "To learn the causes and values of things. To provide universal education. To bring together professional and general knowledge of methodological and theoretical character.").	
-	</blockquote>
+        <blockquote>
+            The motto and mission of the university in Latin is "Rerum cognoscere causas et valorem" (in English "To learn the causes and values of things. To provide universal education. To bring together professional and general knowledge of methodological and theoretical character.").	
+        </blockquote>
 
-	<p>
-		Its 17-acre (69,000 m2) campus is in the vicinity of historical medieval Old Town of Kraków and easily accessible both on foot or by public transportation. In addition to the main campus in Kraków, the university has seven Remote Teaching Centers in the cities of the region.
-	</p>
+        <p>
+            Its 17-acre (69,000 m2) campus is in the vicinity of historical medieval Old Town of Kraków and easily accessible both on foot or by public transportation. In addition to the main campus in Kraków, the university has seven Remote Teaching Centers in the cities of the region.
+        </p>
 
-	<table class="table">
-		<tr>
-			<td>University</td>
-			<td>Data</td>
-		</tr>
-		<tr>
-			<td>Type</td>
-			<td>Public</td>
-		</tr>
-		<tr>
-			<td>Established</td>
-			<td>1925</td>
-		</tr>
-		<tr>
-			<td>Rector</td>
-			<td>Professor Roman Niestrój</td>
-		</tr>
-		<tr>
-			<td>Students</td>
-			<td>20000</td>
-		</tr>
-		<tr>
-			<td>Address</td>
-			<td>ul. Rakowicka 27, 31-510 Kraków, Poland</td>
-		</tr>
-		<tr>
-			<td>Website</td>
-			<td>http://www.uek.krakow.pl</td>
-		</tr>
-		<tr>
-			<td>English website</td>
-			<td>http://uek.krakow.pl/en</td>
-		</tr>
-	</table>
+        <table class="table">
+            <tr>
+                <td>University</td>
+                <td>Data</td>
+            </tr>
+            <tr>
+                <td>Type</td>
+                <td>Public</td>
+            </tr>
+            <tr>
+                <td>Established</td>
+                <td>1925</td>
+            </tr>
+            <tr>
+                <td>Rector</td>
+                <td>Professor Roman Niestrój</td>
+            </tr>
+            <tr>
+                <td>Students</td>
+                <td>20000</td>
+            </tr>
+            <tr>
+                <td>Address</td>
+                <td>ul. Rakowicka 27, 31-510 Kraków, Poland</td>
+            </tr>
+            <tr>
+                <td>Website</td>
+                <td>http://www.uek.krakow.pl</td>
+            </tr>
+            <tr>
+                <td>English website</td>
+                <td>http://uek.krakow.pl/en</td>
+            </tr>
+        </table>
+    </section>
 
-	<h2>History</h2>
-	<p>
-		The university opened its doors on October 1, 1925 as College of Commerce (Wyższe Studium Handlowe).
-	</p>
-	<p>
-		In 1939 the Nazis arrested several academy professors who later were executed or sent to concentration camps. Two buildings of the school were seized, and numerous library books and documents were lost. Classes continued surreptitiously throughout the war, until the school was able to reopen in 1945. The school was nationalized in 1950 and renamed as Higher School of Economics (Wyższa Szkoła Ekonomiczna).
-	</p>
-	<p>
-		In 1974 it was renamed again, as Kraków Academy of Economics (Akademia Ekonomiczna w Krakowie). In 2007 it received its current name: Kraków University of Economics (Uniwersytet Ekonomiczny w Krakowie).
-	</p>
+    <section>
+    <h2>History</h2>
+        <p>
+            The university opened its doors on October 1, 1925 as College of Commerce (Wyższe Studium Handlowe).
+        </p>
+        <p>
+            In 1939 the Nazis arrested several academy professors who later were executed or sent to concentration camps. Two buildings of the school were seized, and numerous library books and documents were lost. Classes continued surreptitiously throughout the war, until the school was able to reopen in 1945. The school was nationalized in 1950 and renamed as Higher School of Economics (Wyższa Szkoła Ekonomiczna).
+        </p>
+        <p>
+            In 1974 it was renamed again, as Kraków Academy of Economics (Akademia Ekonomiczna w Krakowie). In 2007 it received its current name: Kraków University of Economics (Uniwersytet Ekonomiczny w Krakowie).
+        </p>
+    </section>
 
-	<h1>Degrees</h1>
-	<p>
-		Kraków University of Economics has national rights to admit:
-	</p>
+    <section>
+        <h2>Degrees</h2>
+        <p>
+            Kraków University of Economics has national rights to admit:
+        </p>
 
-	<ul>
-		<li>licencjat - 1st degree</li>
-		<li>inżynier - Engineer degree in 2 majors</li>
-		<li>Magister - European master's degree in 11 majors</li>
-		<li>MBA degree - in cooperation with foreign universities</li>
-		<li>MPA degree - in cooperation with foreign universities</li>
-		<li>doktor nauk- PhD in 3 disciplines: economics, management and commodity sciences</li>
-		<li>doktor habilitowany - Habilitation degree (post doc degree) in 3 disciplines: economics, management and commodity sciences</li>
-	</ul>
+        <ul>
+            <li>licencjat - 1st degree</li>
+            <li>inżynier - Engineer degree in 2 majors</li>
+            <li>Magister - European master's degree in 11 majors</li>
+            <li>MBA degree - in cooperation with foreign universities</li>
+            <li>MPA degree - in cooperation with foreign universities</li>
+            <li>doktor nauk- PhD in 3 disciplines: economics, management and commodity sciences</li>
+            <li>doktor habilitowany - Habilitation degree (post doc degree) in 3 disciplines: economics, management and commodity sciences</li>
+        </ul>
 
-	<h1>Structure and Organization</h1>
+        <h2>Structure and Organization</h2>
 
-	<h2>Faculties</h2>
+        <h3>Faculties</h3>
 
-	<ul>
-		<li>Faculty of Economics and International Relations</li>
-		<li>Faculty of Finance</li>
-		<li>Faculty of Commodity Science</li>
-		<li>Faculty of Management</li>
-	</ul>
+        <ul>
+            <li>Faculty of Economics and International Relations</li>
+            <li>Faculty of Finance</li>
+            <li>Faculty of Commodity Science</li>
+            <li>Faculty of Management</li>
+        </ul>
 
-	<h2>Study</h2>
+        <h3>Study</h3>
 
-	<p>
-		There are about 20,000 students (full- and part-time). The university offers 13 majors and 38 specializations within the majors taught in the Polish language. CUE offers also studies in the English language. The university offers plenty of postgraduate courses and studies as well as MBA programs in cooperation with foreign universities.
-	</p>
+        <p>
+            There are about 20,000 students (full- and part-time). The university offers 13 majors and 38 specializations within the majors taught in the Polish language. CUE offers also studies in the English language. The university offers plenty of postgraduate courses and studies as well as MBA programs in cooperation with foreign universities.
+        </p>
 
-	<h2>Affiliation</h2>
+        <h3>Affiliation</h3>
 
-	<p>
-		Kraków University of Economics is member of many international organizations and networks, such as:
-	</p>
+        <p>
+            Kraków University of Economics is member of many international organizations and networks, such as:
+        </p>
 
-	<ol>
-		<li>European University Association (EUA)</li>
-		<li>International Council for Open and Distance Education (ICDE)</li>
-		<li>Network of International Business and Economic Schools (NIBES)</li>
-		<li>European Master of Business Studies (EMBS)</li>
-		<li>European Business Consortium (EBC)</li>
-		<li>International Education Knowledge Network (IEKN)</li>
-		<li>US Department of State-Affiliated Overseas Educational Advising Centers</li>
-		<li>Central European Exchange Program for University Studies (CEEPUS)</li>
-	</ol>
+        <ol>
+            <li>European University Association (EUA)</li>
+            <li>International Council for Open and Distance Education (ICDE)</li>
+            <li>Network of International Business and Economic Schools (NIBES)</li>
+            <li>European Master of Business Studies (EMBS)</li>
+            <li>European Business Consortium (EBC)</li>
+            <li>International Education Knowledge Network (IEKN)</li>
+            <li>US Department of State-Affiliated Overseas Educational Advising Centers</li>
+            <li>Central European Exchange Program for University Studies (CEEPUS)</li>
+        </ol>
+    </section>
+    <section>
+        <h2>Student's personal information</h2>
+        <p>Nie ma tutaj nic ciekawego do pokazania.</p>
+    </section>
 
-
-	<h1>Student's personal information</h1>
-
-	<p>
-		Write 4-5 sentences about yourself (in English or Polish), your studies, hobby, etc. Add at least 2 pictures.
-	</p>
-
-	<h1>The best websites on the Internet</h1>
-
-	A numbered list of your five favourite websites with links ...
-
+    <section>
+        <h2>The best websites on the Internet</h2>
+        <ul>
+            <li><a href="https://www.google.com">Google</a></li>
+            <li><a href="https://duckduckgo.com">DuckDuckGo</a></li>
+            <li><a href="https://www.youtube.com">YouTube</a></li>
+            <li><a href="https://www.reddit.com">Reddit</a></li>
+            <li><a href="http://www.w3fools.com">W3Fools</a></li>
+        </ul>
+    </section>
 </body>
 </html>
