--- a/03-JavaScriptBasics/array.html
+++ b/03-JavaScriptBasics/array.html
@@ -9,19 +9,32 @@
 		<p>Display results on the console</p>
 
 		<script>
-			var tab = [null, null, null, null, null];
-			var i;
+			function nextInt(min, max) {
+ 				min = Math.ceil(min);
+  				max = Math.floor(max);
+  				return Math.floor(Math.random() * (max - min)) + min;
+			}
 
-			// assing random integers to array elements
-			for (i = 0; i < tab.length; i++) {
-				// ...
+			var tab = [null, null, null, null, null];
+			for (let i = 0; i < tab.length; i++) {
+				tab[i] = nextInt(1, 5);
+			}
+
+			function isSorted(arr) {
+				for (let i = 0; i < arr.length - 1; i++) {
+					if (arr[i] > arr[i+1]) {
+						return false;
+					}
+				}
+				return true;
 			}
 
 			// show array elements
-			console.log('Array elements:');
-			// ...
-			
+			console.log('Array elements:', tab);
+
 			// check whether the array is ordered
+			let sorted = isSorted(tab);
+			console.log(sorted);
 			// ...
 			
 			// display message: Array is ordered / unordered
