--- a/03-JavaScriptBasics/enter.html
+++ b/03-JavaScriptBasics/enter.html
@@ -9,13 +9,14 @@
 		<p>Display data one the console</p>
 
 		<script>
-			// enter your name, surname
-			// ...
-			
-			// display your name and surname in a popup window and on the console
-			// ...
-			
-			// 
+			let name = prompt("name = ");
+			let surname = prompt("surname = ");
+			let age = prompt("age = ");
+
+			console.log("name = ", name);
+			console.log("surname = ", surname);
+			console.log("age = ", age);
+
 		</script>
 	</body>
 </html>
