--- a/03-JavaScriptBasics/message.html
+++ b/03-JavaScriptBasics/message.html
@@ -10,12 +10,14 @@
 
 		<script>
 			// display your name, surname on the console
-			// ...
+			let name = "Hubert Kurek";
+			let name2 = "Hubert\nKurek";
+			console.log(name);
+			console.log(name2);
 			
 			// display your name and surname in a popup window
-			// ...
-			
-			// 
+			alert(name);
+			alert(name2);
 		</script>
 	</body>
 </html>
