--- a/03-JavaScriptBasics/pattern.html
+++ b/03-JavaScriptBasics/pattern.html
@@ -8,12 +8,10 @@
 		<h1>Display pattern</h1>
 
 		<script>
-			/* compete JavaScript code ...
-			for (i = 1; i < ...) {
-				// use 'repeat' function to display '*'
+			let repeats = prompt("HOW MUCH?");
+			for (let i = 1; i <= repeats; i++) {
+				console.log("* ".repeat(i));
 			}
-			
-			*/
 		</script>
 	</body>
 </html>
