--- a/03-JavaScriptBasics/speech.html
+++ b/03-JavaScriptBasics/speech.html
@@ -39,14 +39,19 @@
 				
 				// complete a JavaScript code here ...
 				// ...
-				
+				console.log(first[n()] +" "+ second[n()] +" "+ third[n()] +" "+ fourth[n()]);
+			}
+
+			function nextInt(min, max) {
+ 				min = Math.ceil(min);
+  				max = Math.floor(max);
+  				return Math.floor(Math.random() * (max - min)) + min;
 			}
 
 			// returns random integer from 0 to 9
 			function n() {
-				// ...
+				return nextInt(0, 9);
 			}
-			
 		</script>
 	</body>
 </html>
