Added js external file to external.html

--- a/03-JavaScriptBasics/external.html
+++ b/03-JavaScriptBasics/external.html
@@ -10,6 +10,7 @@
 			after clicking the button, display the current date in the popup window;
 			use an external script with a function
 		-->
-		<button type="button">Display the current date</button>
+		<button type="button" onclick="date()">Display the current date</button>
 
+		<script src="js/data.js"></script>
 </html>
