printing all info about fav movie

--- a/04-JavaScriptOOP/movie.html
+++ b/04-JavaScriptOOP/movie.html
@@ -17,9 +17,13 @@
 			};
 			console.log("## My favourite film ##");
 			console.log("Title: ", myFavMovie.title);
-			console.log("Genre: ", myFavMovie.genre);
-			// ...
-			
+			console.log("year: ", myFavMovie.genre);
+			console.log("database: ", myFavMovie.database);
+			console.log("specs: ", myFavMovie.specs);
+			console.log("\tbudget: ", myFavMovie.specs.budget);
+			console.log("\tlanguage: ", myFavMovie.specs.language);
+			console.log("\tdigitalSound: ", myFavMovie.specs.digitalSound);
+			console.log("stars: ", myFavMovie.stars.toString(), myFavMovie.stars);
 		</script>
 	</body>
 </html>
