--- a/04-JavaScriptOOP/bmi.html
+++ b/04-JavaScriptOOP/bmi.html
@@ -14,19 +14,20 @@
 						weight: null,
 						height: null,
 						enterData: function(){
-							// enter weight and height, and assign them to the object properties
+							this.weight = prompt("Weight? (in kg)");
+							this.height = prompt("Height? (in meters)");
 						},
 						calculate: function(){
-							return // create a formula for calculating bmi
+							let bmi = this.weight / Math.pow(this.height, 2);
+							return bmi;
 						},
 						display: function(){
-							// display the result in a popup window
+							console.log(this);
+							alert("Your bmi is " + this.calculate());
 						}
 				}
-			
-				// call BMI methods
-				// ...
-			
+				BMI.enterData();
+				BMI.display();
 			}
 		</script>
 	</body>
