--- a/04-JavaScriptOOP/books.html
+++ b/04-JavaScriptOOP/books.html
@@ -7,6 +7,31 @@
 	<body>
 		<h1>Display books list</h1>
 		<script>
+			function Book(id,title, author, format, price) {
+				this.id = id;
+				this.title = title;
+				this.author = author;
+				this.format = format;
+				this.price = price;
+			}
+
+			let books = [
+				new Book(0, "The Return of Duck and Goose", "Sir Piggy", "paperback", 19.99),
+				new Book(1, "The Adventures of Duck and Goose", "D. Cow", "hardback", 18.99),
+				new Book(2, "My Friend is a Duck", "A. Parrot", "paperback", 14.99),
+				new Book(3, "\'Duck and Goose\' Cheat Sheet for Students", "Polly Parrot", "paperback", 5.99),
+				new Book(4, "\'Duck and Goose\': an allegory for modern times?", "Bor Ing", "ebook", 59.99)
+			];
+
+			books.forEach(function(elem) {
+				if (elem.format === "paperback") {
+					console.log("id", elem.id);
+					console.log("title", elem.title);
+					console.log("author", elem.author);
+					console.log("format", elem.format);
+					console.log("price", elem.price);
+				}
+			});
 		</script>
 	</body>
 </html>
