Added translate text when mouse was hover on text.

--- a/05-DocumentObjectModel/translate.html
+++ b/05-DocumentObjectModel/translate.html
@@ -8,10 +8,18 @@
 		<h3>Sticks and stones may break my bones, but words will never harm me.</h3>
 		<script>
 			// a JavaScript code here ...
-			
+			let h3Tag = document.getElementsByTagName("h3")[0];
+			h3Tag.addEventListener("mouseover", function() {
+				this.innerText = "Kije i kamienie kości mi połamią, ale twoje słowa nigdy mnie nie zranią";
+				console.log("mouseover");
+			});
+			h3Tag.addEventListener("mouseleave", function() {
+				console.log("mouseleave");
+				this.innerText = "Sticks and stones may break my bones, but words will never harm me."
+			});
 			// Translation:
 			// Kije i kamienie kości mi połamią, ale twoje słowa nigdy mnie nie zranią
-			
+
 		</script>
 	</body>
 </html>
