--- a/05-DocumentObjectModel/type.html
+++ b/05-DocumentObjectModel/type.html
@@ -22,23 +22,48 @@
 		
 		<textarea rows="15" cols="50"></textarea><br>
 
-
 		<script>
             let textarea = document.getElementsByTagName("textarea")[0];
             let text = document.getElementsByTagName("p")[0].innerText;
-            console.log(text);
+            text = text.replace(/\n/g, " ");
+            let splitText = text.split(" ");
+            console.log(splitText);
 
             textarea.addEventListener("focus", function (event) {
                 console.log('start counting');
+                event.target.value="";
                 setTimeout(function() {
                     let lastTextState = event.target.value;
+                    lastTextState = lastTextState.replace(/\n/g, " ");
+                    console.log(lastTextState);
                     let words = lastTextState.split(" ");
+
+                    let correntCounter = 0;
+                    let wrongWords = [];
+                    for (let i = 0; i < words.length; i++) {
+                        if (words[i] === splitText[i]) {
+                            correntCounter++;
+                        } else {
+                            wrongWords.push(words[i]);
+                        }
+                    }
+                    console.log("Corrent words", correntCounter);
+
+                    console.log(words);
                     let wordsLength = words.length;
                     let textLength = lastTextState.length;
 
                     let counter = document.createElement("p");
-                    counter.innerText = "Napisales" + wordsLength + " słów i " + textLength + " znaków";
+                    counter.innerText = "Napisales ogólnie " + wordsLength + " słów i " + textLength + " znaków,";
+                    counter.innerText += " z czego " + correntCounter + " słowa są poprawne";
+                    let wrongWordsText = document.createElement("p");
+                    if (wrongWords.length === 0) {
+                        wrongWordsText.innerText = "";
+                    } else {
+                        wrongWordsText.innerText = "Twoje błedne słowa: " +  wrongWords.toString();
+                    }
                     document.getElementsByTagName("body")[0].appendChild(counter);
+                    document.getElementsByTagName("body")[0].appendChild(wrongWordsText);
 
                     event.target.value = "";
                 }, 30 * 1000);
