--- a/05-DocumentObjectModel/type.html
+++ b/05-DocumentObjectModel/type.html
@@ -30,6 +30,7 @@
         console.log(splitText);
 
         textarea.addEventListener("focus", function (event) {
+            console.log(event);
             console.log('start counting');
             event.target.value = "";
             setTimeout(function () {
@@ -64,8 +65,6 @@
                 }
                 document.getElementsByTagName("body")[0].appendChild(counter);
                 document.getElementsByTagName("body")[0].appendChild(wrongWordsText);
-
-                event.target.value = "";
             }, 30 * 1000);
         });
     </script>
